@@ -194,7 +194,8 @@ sub handler
 	$session->{preparing_static_page} = 1; 
 	if( $uri =~ m! ^/view(.*) !x )
 	{
-		EPrints::Update::Views::update_view_file( $session, $lang, $localpath, $uri );
+		my $filename = EPrints::Update::Views::update_view_file( $session, $lang, $localpath, $uri );
+		$r->filename( $filename );
 	}
 	else
 	{
